Added sort option into theme list page
