# backend/generated-server/models/gorm_theme.go
@@ -11,5 +11,6 @@ type GormTheme struct {
 	Description string `gorm:"type:text;not null"`
 	Category    string `gorm:"size:100;not null"`
 	TimeLimitInSeconds int `gorm:"not null"`
-	CreatorID   *uint   // FK to the users table. nil for official themes.
+	CreatorID          *uint  // FK to the users table. nil for official themes.
+	FavoritesCount     int    `gorm:"not null;default:0"`
 }
